feat : 어항 커넥트 기능 일부 구현
firebase에 어항 틀 코드 구현
- uuid로 어항 생성
- 내부 초기 세팅